# insta_test

./: .env  INSTALLATION.md  LICENSE  README.md  get_product_info.py  laptop_results.txt  pyproject.toml  structure.md  tablet_results.txt  try4.py
