[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "get_product_info"
version = "0.1.0"
description = "InstaPermit Coding Test"
requires-python = ">=3.10"
dependencies = [
    "httpx==0.28.1",
    "selenium==4.41.0",
    "webdriver-manager==4.0.2",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]